# DurainCheckerDemo

./: .env.example  .gitignore  README.md  eslint.config.js  hardhat.config.js  index.html  lint_output.txt  nft.html  package-lock.json  package.json  slides.html  tsconfig.json  vite.config.js  vitest.config.js
.github/workflows/: ci.yml  deploy.yml
api/: disease_model.onnx  disease_schema.json  feature_schema.json  leaf_disease_model.onnx  leaf_labels (1).json  model.onnx  predict.py  predict_disease.py  predict_leaf.py
assets/: index-6qBEmFZs.css  index-B6LrIMw0.css  index-BDuOnBZe.js  index-BXk0bNVP.css  index-BxNqCW74.js  index-CuX1NwyV.js  index-DMOYdo06.css  index-DYM1RtBa.js  index-DvTll-_y.js  index-nxAgZ82s.js  index-xxo6NRwc.css
cache/: solidity-files-cache.json
contracts/: DurianTrust.json  DurianTrust.sol
ml/: dataset.csv  disease_dataset.csv  durian_leaf_disease_classifier_colab.ipynb  generate_dataset.py  generate_dataset_disease.py  requirements.txt  train.py  train_disease.py
program/: .gitignore  Anchor.toml  package.json
program/programs/durian_trust/: Cargo.toml
program/programs/durian_trust/src/: lib.rs
program/tests/: durian_trust.test.mjs
public/: nft.html  slides.html
public/contracts/: DurianTrust.json
public/solana/: idl.json  lib.rs
scripts/: deploy.js
src/: App.css  App.jsx  index.css  main.jsx  utilities.css
src/components/: AIResultCard.jsx  BatchQRLabel.jsx  BlockchainTimeline.jsx  DemoSection.jsx  Footer.jsx  HashProofChip.jsx  Header.jsx  Hero.jsx  ImpactSection.jsx  (+10 more)
test/: DurianTrust.js  test-translations.js
(+23 files in other folders)
