[package]
name = "durian-trust"
version = "0.1.0"
description = "Durian supply chain trust program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "durian_trust"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
